--- a/index.html
+++ b/index.html
@@ -149,208 +149,209 @@
 						<img src="images/project-zizi-show.jpg" alt="Jake Elwes digital artist" />
 
 						<h3>The Zizi Show</h3>
+
+						<span style="display:block" class="category">video &amp; interactive performance, 2020 -
+							2023</span>
+					</div>
+				</div>
 			</a>
 
-			<span style="display:block" class="category">video &amp; interactive performance, 2020 - 2023</span>
-		</div>
-		</div>
+			<a href="project-zizi-and-me.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-zizi-and-me.jpg" alt="Jake Elwes digital artist" />
 
-		<a href="project-zizi-and-me.html" class="permalink">
-			<div class="desktop-4 tablet-6 columns">
-				<div class="item">
-					<img src="images/project-zizi-and-me.jpg" alt="Jake Elwes digital artist" />
-
-					<h3>Zizi & Me</h3>
-					<span class="category">performance collaboration, 2020 - 2023 (ongoing)</span>
+						<h3>Zizi & Me</h3>
+						<span class="category">performance collaboration, 2020 - 2023 (ongoing)</span>
+					</div>
 				</div>
-			</div> 
-		</a>
+			</a>
 
-		<a href="project-zizi-2019.html" class="permalink">
-			<div class="desktop-4 tablet-6 columns">
-				<div class="item">
-					<img src="images/project-zizi19.jpg" alt="Jake Elwes digital artist" />
+			<a href="project-zizi-2019.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-zizi19.jpg" alt="Jake Elwes digital artist" />
 
-					<h3>Zizi - Queering the Dataset</h3>
-					<span class="category">video, 2019</span>
+						<h3>Zizi - Queering the Dataset</h3>
+						<span class="category">video, 2019</span>
+					</div>
 				</div>
-			</div>
-		</a>
+			</a>
 
-		<div class="clear hide-under-tablet"></div>
+			<div class="clear hide-under-tablet"></div>
 
-		<a href="project-cusp.html" class="permalink">
-			<div class="desktop-4 tablet-6 columns">
-				<div class="item">
-					<img src="images/project-cusp.jpg" alt="Jake Elwes digital artist" />
+			<a href="project-cusp.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-cusp.jpg" alt="Jake Elwes digital artist" />
 
-					<h3>CUSP</h3>
-					<span class="category">video, 2019</span>
+						<h3>CUSP</h3>
+						<span class="category">video, 2019</span>
+					</div>
 				</div>
-			</div>
-		</a>
+			</a>
 
-		<a href="project-oakComputer.html" class="permalink">
-			<div class="desktop-4 tablet-6 columns">
-				<div class="item">
-					<img src="images/project-oakComputer.jpg" alt="Jake Elwes digital artist" />
+			<a href="project-oakComputer.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-oakComputer.jpg" alt="Jake Elwes digital artist" />
 
-					<h3>O(a)k Computer</h3>
-					<span class="category">video &amp; print series, 2019 (ongoing)</span>
+						<h3>O(a)k Computer</h3>
+						<span class="category">video &amp; print series, 2019 (ongoing)</span>
+					</div>
 				</div>
-			</div>
-		</a>
+			</a>
 
 
-		<a href="project-closedLoop.html" class="permalink">
-			<div class="desktop-4 tablet-6 columns">
-				<div class="item">
-					<img src="images/project-closedLoop.jpg" alt="Jake Elwes digital artist" />
+			<a href="project-closedLoop.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-closedLoop.jpg" alt="Jake Elwes digital artist" />
 
-					<h3>Closed Loop</h3>
-					<span class="category">installation, 2017</span>
-				</div><!-- // .item -->
-			</div><!-- // .desktop-4 -->
-		</a>
-
-
-		<div class="clear hide-under-tablet"></div>
+						<h3>Closed Loop</h3>
+						<span class="category">installation, 2017</span>
+					</div><!-- // .item -->
+				</div><!-- // .desktop-4 -->
+			</a>
 
 
-		<a href="project-latentSpace.html" class="permalink">
-			<div class="desktop-4 tablet-6 columns">
-				<div class="item">
-					<img src="images/project-latentSpace.jpg" alt="Jake Elwes digital artist" />
-
-					<h3>Latent Space</h3>
-					<span class="category">video, 2017</span>
-				</div><!-- // .item -->
-			</div><!-- // .desktop-4 -->
-		</a>
+			<div class="clear hide-under-tablet"></div>
 
 
-		<a href="project-DaDaTa.html" class="permalink">
-			<div class="desktop-4 tablet-6 columns">
-				<div class="item">
-					<img src="images/project-DaDaTa.jpg" alt="Jake Elwes digital artist" />
+			<a href="project-latentSpace.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-latentSpace.jpg" alt="Jake Elwes digital artist" />
 
-					<h3>dada da ta</h3>
-					<span class="category">video, 2016</span>
-				</div><!-- // .item -->
-			</div><!-- // .desktop-4 -->
-		</a>
+						<h3>Latent Space</h3>
+						<span class="category">video, 2017</span>
+					</div><!-- // .item -->
+				</div><!-- // .desktop-4 -->
+			</a>
 
 
+			<a href="project-DaDaTa.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-DaDaTa.jpg" alt="Jake Elwes digital artist" />
+
+						<h3>dada da ta</h3>
+						<span class="category">video, 2016</span>
+					</div><!-- // .item -->
+				</div><!-- // .desktop-4 -->
+			</a>
 
 
 
-		<a href="project-digitalWhisper.html" class="permalink">
-			<div class="desktop-4 tablet-6 columns">
-				<div class="item">
-					<img src="images/project-digitalWhisper.jpg" alt="Jake Elwes digital artist" />
-
-					<h3>Digital Whispers</h3>
-					<span class="category">installation, 2016</span>
-				</div><!-- // .item -->
-			</div><!-- // .desktop-4 -->
-		</a>
-
-		<div class="clear hide-under-tablet"></div>
 
 
-		<a href="project-AutoEncodedBuddha.html" class="permalink">
-			<div class="desktop-4 tablet-6 columns">
-				<div class="item">
-					<img src="images/project-AutoEncodedBuddha.jpg" alt="Jake Elwes digital artist" />
+			<a href="project-digitalWhisper.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-digitalWhisper.jpg" alt="Jake Elwes digital artist" />
 
-					<h3>Auto-Encoded Buddha</h3>
-					<span class="category">installation, 2016</span>
-				</div><!-- // .item -->
-			</div><!-- // .desktop-4 -->
-		</a>
+						<h3>Digital Whispers</h3>
+						<span class="category">installation, 2016</span>
+					</div><!-- // .item -->
+				</div><!-- // .desktop-4 -->
+			</a>
+
+			<div class="clear hide-under-tablet"></div>
 
 
+			<a href="project-AutoEncodedBuddha.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-AutoEncodedBuddha.jpg" alt="Jake Elwes digital artist" />
 
-		<a href="project-MLPorn.html" class="permalink">
-			<div class="desktop-4 tablet-6 columns">
-				<div class="item">
-					<img src="images/project-MLPorn.jpg" alt="Jake Elwes digital artist" />
-
-					<h3>Machine Learning Porn</h3>
-					<span class="category">video, 2016</span>
-				</div><!-- // .item -->
-			</div><!-- // .desktop-4 -->
-		</a>
+						<h3>Auto-Encoded Buddha</h3>
+						<span class="category">installation, 2016</span>
+					</div><!-- // .item -->
+				</div><!-- // .desktop-4 -->
+			</a>
 
 
 
-		<a href="project-digitalTouch.html" class="permalink">
-			<div class="desktop-4 tablet-6 columns">
-				<div class="item">
-					<img src="images/project-digitalTouch.jpg" alt="Jake Elwes digital artist" />
+			<a href="project-MLPorn.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-MLPorn.jpg" alt="Jake Elwes digital artist" />
 
-					<h3>Digital Caress</h3>
-					<span class="category">print, 2015</span>
-				</div><!-- // .item -->
-			</div><!-- // .desktop-4 -->
-		</a>
-
-		<div class="clear hide-under-tablet"></div>
-
-
-		<a href="project-circuit.html" class="permalink">
-			<div class="desktop-4 tablet-6 columns">
-				<div class="item">
-					<img src="images/project-circuit.jpg" alt="Jake Elwes digital artist" />
-
-					<h3>Solid State</h3>
-					<span class="category">print, 2015</span>
-				</div><!-- // .item -->
-			</div><!-- // .desktop-4 -->
-		</a>
+						<h3>Machine Learning Porn</h3>
+						<span class="category">video, 2016</span>
+					</div><!-- // .item -->
+				</div><!-- // .desktop-4 -->
+			</a>
 
 
 
-		<a href="project-iPhoneTouch.html" class="permalink">
-			<div class="desktop-4 tablet-6 columns">
-				<div class="item">
-					<img src="images/project-iPhoneTouch.jpg" alt="Jake Elwes digital artist" />
+			<a href="project-digitalTouch.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-digitalTouch.jpg" alt="Jake Elwes digital artist" />
 
-					<h3>Behind The Screen</h3>
-					<span class="category">app, 2015</span>
-				</div><!-- // .item -->
-			</div><!-- // .desktop-4 -->
-		</a>
+						<h3>Digital Caress</h3>
+						<span class="category">print, 2015</span>
+					</div><!-- // .item -->
+				</div><!-- // .desktop-4 -->
+			</a>
+
+			<div class="clear hide-under-tablet"></div>
 
 
+			<a href="project-circuit.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-circuit.jpg" alt="Jake Elwes digital artist" />
 
-		<a href="project-pornCircles.html" class="permalink">
-			<div class="desktop-4 tablet-6 columns">
-				<div class="item">
-					<img src="images/project-pornCircles.jpg" alt="Jake Elwes digital artist" />
-
-					<h3>Porn Saturation</h3>
-					<span class="category">print, 2015</span>
-				</div><!-- // .item -->
-			</div><!-- // .desktop-4 -->
-		</a>
-
-		<div class="clear hide-under-tablet"></div>
-
-		<a href="project-lineForWalk.html" class="permalink">
-			<div class="desktop-4 tablet-6 columns">
-				<div class="item">
-					<img src="images/project-lineForWalk.jpg" alt="Jake Elwes digital artist" />
-
-					<h3>Taking a Phone for a Walk</h3>
-					<span class="category">print & app, 2015</span>
-				</div><!-- // .item -->
-			</div><!-- // .desktop-4 -->
-		</a>
+						<h3>Solid State</h3>
+						<span class="category">print, 2015</span>
+					</div><!-- // .item -->
+				</div><!-- // .desktop-4 -->
+			</a>
 
 
 
-		<!-- Download: <a id=show target="_blank" href="JElwes-Portfolio.pdf">WORKS PDF</a> | <a id=show target="_blank" href="cv.pdf">CV PDF</a> -->
+			<a href="project-iPhoneTouch.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-iPhoneTouch.jpg" alt="Jake Elwes digital artist" />
+
+						<h3>Behind The Screen</h3>
+						<span class="category">app, 2015</span>
+					</div><!-- // .item -->
+				</div><!-- // .desktop-4 -->
+			</a>
+
+
+
+			<a href="project-pornCircles.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-pornCircles.jpg" alt="Jake Elwes digital artist" />
+
+						<h3>Porn Saturation</h3>
+						<span class="category">print, 2015</span>
+					</div><!-- // .item -->
+				</div><!-- // .desktop-4 -->
+			</a>
+
+			<div class="clear hide-under-tablet"></div>
+
+			<a href="project-lineForWalk.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-lineForWalk.jpg" alt="Jake Elwes digital artist" />
+
+						<h3>Taking a Phone for a Walk</h3>
+						<span class="category">print & app, 2015</span>
+					</div><!-- // .item -->
+				</div><!-- // .desktop-4 -->
+			</a>
+
+
+
+			<!-- Download: <a id=show target="_blank" href="JElwes-Portfolio.pdf">WORKS PDF</a> | <a id=show target="_blank" href="cv.pdf">CV PDF</a> -->
 
 		</div><!-- // .container -->
 	</section><!-- // section#works -->
