zizi about special thanks

--- a/about-zizi/index.html
+++ b/about-zizi/index.html
@@ -61,7 +61,7 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 <div class="p-4">
 	<p><a href="https://www.vam.ac.uk/event/ojRbdO9D2a/the-zizi-show-by-jake-elwes-2023-24"
 			target="_blank">V&amp;A Information</a></p>
-			<p><a href="https://www.jakeelwes.com/index.html" target="_blank">Artists Website</a> | <a href="https://www.instagram.com/jakeelwes/" target="_blank">Instagram</a></p>
+			<p><a href="https://www.jakeelwes.com/index.html" target="_blank">Artist's Website</a> | <a href="https://www.instagram.com/jakeelwes/" target="_blank">Instagram</a></p>
 		</div>
 </div>
 		<img class="mx-auto" src="img/diagram-gen-full-small.gif" />
@@ -410,6 +410,10 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 				title="Jake Elwes and Me the Drag Queen answer 10 questions about The Zizi Project" frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 				allowfullscreen="allowfullscreen"></iframe>
+		</div>
+
+		<div class="italics text-center text-xs p-4">
+			Special thanks to Tom Francome, Charlie Baker<br> Luke &amp; Anneke Elwes, Dave Cross + John &amp; James at the RVT
 		</div>
 
 		<div class="text-center text-xs p-4">
