zizi about quote

--- a/about-zizi/index.html
+++ b/about-zizi/index.html
@@ -69,13 +69,11 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 			<div class="p-4 italic space-y-4 font-serif">
 				<p>
 					"The Zizi Project aims to bring together two things I love, artificial intelligence, and the world
-					of drag performance. In an entertaining and humorous way, drag has allowed me to dig into some of
-					the social issues built into machine learning technology. Drag is just such a brilliant medium for
-					exploring the layers of construction and social bias in AI.
+					of drag performance. Drag has allowed me to dig into some of the social issues built into machine learning technology and explore the layers of construction and social bias in AI.
 				</p>
 				<p>
 					Working closely with friends from the London drag scene, in Zizi we have created a ‘deepfake’
-					virtual cabaret. Deepfake technology has enabled us to collaborate with machine learning to do drag
+					virtual cabaret. Deepfake technology has enabled us to collaborate with machine learning to do drag and consentually re-animate each others forms
 					- trained on 21 extremely talented performers - perhaps proving that drag queens, drag kings and
 					drag things will never be replaced by artificial intelligence.
 				</p>
