zizi about quote

--- a/about-zizi/index.html
+++ b/about-zizi/index.html
@@ -73,8 +73,7 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 				</p>
 				<p>
 					Working closely with friends from the London drag scene, in Zizi we have created a ‘deepfake’
-					virtual cabaret. Deepfake technology has enabled us to collaborate with machine learning to do drag and consentually re-animate each others forms
-					- trained on 21 extremely talented performers - perhaps proving that drag queens, drag kings and
+					virtual cabaret. Deepfake technology has enabled us to collaborate with machine learning to do drag, consentually re-animating each others forms. We trained our deepfakes on 21 extremely talented performers - perhaps proving that drag queens, drag kings and
 					drag things will never be replaced by artificial intelligence.
 				</p>
 				<p>
