zizi special thanks2

--- a/about-zizi/index.html
+++ b/about-zizi/index.html
@@ -20,15 +20,15 @@
 	<meta name="keywords" content="The Zizi Show, Deepfake Drag, Artificial Intelligence, Jake Elwes">
 
 	<meta property="og:description"
-    content="Drag Queens, Drag Kings, Drag Things and Artificial Intelligence... 
+		content="Drag Queens, Drag Kings, Drag Things and Artificial Intelligence... 
     The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting a groundbreaking new show with a twist. It features acts that have been constructed using deepfake technology, learning how to do drag by watching a diverse group of human performers. The Zizi Show dissects one of the dominant myths about AI, the notion that 'an AI' is a thing we might mistake for a person.">
-  <meta property="og:image" content="https://zizi.ai/zizishow.jpg">
+	<meta property="og:image" content="https://zizi.ai/zizishow.jpg">
 
-  <meta name="twitter:title" content="The Zizi Show - A Deepfake Drag Cabaret">
-  <meta name="twitter:description"
-    content=" Drag Queens, Drag Kings, Drag Things and Artificial Intelligence... 
+	<meta name="twitter:title" content="The Zizi Show - A Deepfake Drag Cabaret">
+	<meta name="twitter:description"
+		content=" Drag Queens, Drag Kings, Drag Things and Artificial Intelligence... 
 The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting a groundbreaking new show with a twist. It features acts that have been constructed using deepfake technology, learning how to do drag by watching a diverse group of human performers. The Zizi Show dissects one of the dominant myths about AI, the notion that 'an AI' is a thing we might mistake for a person.">
-  <meta name="twitter:image" content="https://zizi.ai/zizishow.jpg">
+	<meta name="twitter:image" content="https://zizi.ai/zizishow.jpg">
 
 </head>
 
@@ -56,24 +56,29 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 				title="Making of The Zizi Show" frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 				allowfullscreen="allowfullscreen"></iframe>
-<div class="font-serif text-center team md:px-20">
-	<p>A multi-channel video installation commissioned by the V&A with the support of the Manitou Foundation, created with 21 of London and the UK’s top drag artists.</p>
-<div class="p-4">
-	<p><a href="https://www.vam.ac.uk/event/ojRbdO9D2a/the-zizi-show-by-jake-elwes-2023-24"
-			target="_blank">V&amp;A Information</a></p>
-			<p><a href="https://www.jakeelwes.com/index.html" target="_blank">Artist's Website</a> | <a href="https://www.instagram.com/jakeelwes/" target="_blank">Instagram</a></p>
-		</div>
-</div>
-		<img class="mx-auto" src="img/diagram-gen-full-small.gif" />
+			<div class="font-serif text-center team md:px-20">
+				<p>A multi-channel video installation commissioned by the V&A with the support of the Manitou
+					Foundation, created with 21 of London and the UK’s top drag artists.</p>
+				<div class="p-4">
+					<p><a href="https://www.vam.ac.uk/event/ojRbdO9D2a/the-zizi-show-by-jake-elwes-2023-24"
+							target="_blank">V&amp;A Information</a></p>
+					<p><a href="https://www.jakeelwes.com/index.html" target="_blank">Artist's Website</a> | <a
+							href="https://www.instagram.com/jakeelwes/" target="_blank">Instagram</a></p>
+				</div>
+			</div>
+			<img class="mx-auto" src="img/diagram-gen-full-small.gif" />
 
 			<div class="p-4 italic space-y-4 font-serif">
 				<p>
 					"The Zizi Project aims to bring together two things I love, artificial intelligence, and the world
-					of drag performance. Drag has allowed me to dig into some of the social issues built into machine learning technology and explore the layers of construction and social bias in AI.
+					of drag performance. Drag has allowed me to dig into some of the social issues built into machine
+					learning technology and explore the layers of construction and social bias in AI.
 				</p>
 				<p>
 					Working closely with friends from the London drag scene, in Zizi we have created a ‘deepfake’
-					virtual cabaret. Deepfake technology has enabled us to collaborate with machine learning to do drag, consentually re-animating each others forms. We trained our deepfakes on 21 extremely talented performers - perhaps proving that drag queens, drag kings and
+					virtual cabaret. Deepfake technology has enabled us to collaborate with machine learning to do drag,
+					consentually re-animating each others forms. We trained our deepfakes on 21 extremely talented
+					performers - perhaps proving that drag queens, drag kings and
 					drag things will never be replaced by artificial intelligence.
 				</p>
 				<p>
@@ -132,6 +137,10 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 					the opening of the new
 					Photography Center.</p>
 
+				<p> Special thanks to Tom Francome for the documentary film, Charlie Baker for help with sound, Luke &amp; Anneke Elwes, Dave Cross + John &amp;
+					James at the RVT
+				</p>
+
 
 				<p>Email <a
 						href="javascript:window.location.href=atob('bWFpbHRvOnppemlkcmFnc2hvd0BnbWFpbC5jb20/U3ViamVjdD1aaXppIFNob3cgQWNjZXNzIFJlcXVlc3QmYm9keT1QbGVhc2Ugc2VuZCBtZSB0aGUgYWNjZXNzIGNvZGUgZm9yIHppemkuYWksIHRoYW5rIHlvdS4=')"
@@ -160,12 +169,14 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 					<img src="img/cast/bougie.jpg" alt="Bourgeoisie Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Bourgeoisie</p>
 				</a>
-				<a class="flex flex-col items-center" href="https://www.instagram.com/tastemycaramelle/" target="_blank">
+				<a class="flex flex-col items-center" href="https://www.instagram.com/tastemycaramelle/"
+					target="_blank">
 
 					<img src="img/cast/cara.jpg" alt="Cara Melle Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Cara Melle</p>
 				</a>
-				<a class="flex flex-col items-center" href="https://www.instagram.com/charlieprobablywood/" target="_blank">
+				<a class="flex flex-col items-center" href="https://www.instagram.com/charlieprobablywood/"
+					target="_blank">
 
 					<img src="img/cast/charlie.jpg" alt="Charlie Wood Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Charlie Wood</p>
@@ -175,7 +186,8 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 					<img src="img/cast/chiyo.jpg" alt="Chiyo Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Chiyo</p>
 				</a>
-				<a class="flex flex-col items-center" href="https://www.instagram.com/dahc_dermur_viii/" target="_blank">
+				<a class="flex flex-col items-center" href="https://www.instagram.com/dahc_dermur_viii/"
+					target="_blank">
 
 					<img src="img/cast/dahc.jpg" alt="Dahc Dermur VIII Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Dahc Dermur VIII</p>
@@ -210,7 +222,8 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 					<img src="img/cast/mahatma.jpg" alt="Mahatma Khandi Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Mahatma Khandi</p>
 				</a>
-				<a class="flex flex-col items-center" href="https://www.instagram.com/markanthony.dragking/" target="_blank">
+				<a class="flex flex-col items-center" href="https://www.instagram.com/markanthony.dragking/"
+					target="_blank">
 
 					<img src="img/cast/mark.jpg" alt="Mark Anthony Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Mark Anthony</p>
@@ -235,7 +248,8 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 					<img src="img/cast/ruby.jpg" alt="Ruby Wednesday Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Ruby Wednesday</p>
 				</a>
-				<a class="flex flex-col items-center" href="https://www.instagram.com/officialsistersister/" target="_blank">
+				<a class="flex flex-col items-center" href="https://www.instagram.com/officialsistersister/"
+					target="_blank">
 
 					<img src="img/cast/sister.jpg" alt="Sister Sister, Photo">
 					<p class="underline decoration-2 decoration-rose-700 underline-offset-2">Sister Sister</p>
@@ -260,25 +274,31 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 
 			<div class="text-sm space-y-4">
 				<p><i>This Is My Life, Shirley Bassey</i>
-					<br> Movement by <a href="https://www.instagram.com/methedragqueen/" target="_blank">Me The Drag Queen</a>
+					<br> Movement by <a href="https://www.instagram.com/methedragqueen/" target="_blank">Me The Drag
+						Queen</a>
 				</p>
 				<p><i>You Make Me Feel (Mighty Real), Sylvester</i>
 					<br> Movement by <a href="https://www.instagram.com/prinxchiyo/" target="_blank">Chiyo</a>
 				</p>
 				<p><i>Raise Your Glass, Pink</i>
-					<br> Movement by <a href="https://www.instagram.com/lillysnatch/" target="_blank">Lilly SnatchDragon</a>
+					<br> Movement by <a href="https://www.instagram.com/lillysnatch/" target="_blank">Lilly
+						SnatchDragon</a>
 				</p>
 				<p><i>I Am What I Am, Douglas Hodge</i>
-					<br> Movement by <a href="https://www.instagram.com/methedragqueen/" target="_blank">Me The Drag Queen</a>
+					<br> Movement by <a href="https://www.instagram.com/methedragqueen/" target="_blank">Me The Drag
+						Queen</a>
 				</p>
 				<p><i>Freedom! '90, George Michael</i>
-					<br> Movement by <a href="https://www.instagram.com/markanthony.dragking/" target="_blank">Mark Anthony</a>
+					<br> Movement by <a href="https://www.instagram.com/markanthony.dragking/" target="_blank">Mark
+						Anthony</a>
 				</p>
 				<p><i>Sweet Dreams (Live), Beyoncé</i>
-					<br> Movement by <a href="https://www.instagram.com/tastemycaramelle/" target="_blank">Cara Melle</a>
+					<br> Movement by <a href="https://www.instagram.com/tastemycaramelle/" target="_blank">Cara
+						Melle</a>
 				</p>
 				<p><i>Five Years, David Bowie</i>
-					<br> Movement by <a href="https://www.instagram.com/mxrubywednesday/" target="_blank">Ruby Wednesday</a>
+					<br> Movement by <a href="https://www.instagram.com/mxrubywednesday/" target="_blank">Ruby
+						Wednesday</a>
 				</p>
 				<p>Transition movement by <a href="https://www.instagram.com/wet_mess/" target="_blank">Wet Mess</a></p>
 			</div>
@@ -407,10 +427,6 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 				title="Jake Elwes and Me the Drag Queen answer 10 questions about The Zizi Project" frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 				allowfullscreen="allowfullscreen"></iframe>
-		</div>
-
-		<div class="italics text-center text-xs p-4">
-			Special thanks to Tom Francome, Charlie Baker<br> Luke &amp; Anneke Elwes, Dave Cross + John &amp; James at the RVT
 		</div>
 
 		<div class="text-center text-xs p-4">
