--- a/about-zizi/index.html
+++ b/about-zizi/index.html
@@ -310,7 +310,7 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 			<h2 class="font-bold text-2xl mb-8 font-serif text-center">Process</h2>
 			<p>
 				Machine learning – teaching computers to learn from data – and specifically deepfake technology, has
-				been used to construct all the videos you see on this website. To produce a deepfake, you start by
+				been used to construct all the videos you see. To produce a deepfake, you start by
 				training a neural network<sup><a href="#fn1" id="ref1">1</a></sup> on a dataset of images.
 			</p>
 			<p>
@@ -351,7 +351,7 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 				These visuals below show how new deepfake images of <a
 					href="https://www.instagram.com/lillysnatch/">Lilly SnatchDragon</a> can be generated from the
 				trained neural network (here with her movement controlled by <a
-					href="https://www.instagram.com/methedragqueen">Me The Drag Queen</a>.
+					href="https://www.instagram.com/methedragqueen">Me The Drag Queen)</a>.
 			</p>
 
 			<img class="mx-auto" src="img/diagram-gen-close-small.gif" />
