--- a/about-zizi/index.html
+++ b/about-zizi/index.html
@@ -58,7 +58,7 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 				allowfullscreen="allowfullscreen"></iframe>
 			<div class="font-serif text-center team md:px-20">
 				<p>A multi-channel video installation commissioned by the V&A with the support of the Manitou
-					Foundation, created with 21 of London and the UK’s top drag artists.</p>
+					Fund, created with 21 of London and the UK’s top drag artists.</p>
 				<div class="p-4">
 					<p><a href="https://www.vam.ac.uk/event/ojRbdO9D2a/the-zizi-show-by-jake-elwes-2023-24"
 							target="_blank">V&amp;A Information</a></p>
