Edinburgh credit changes

--- a/about-zizi/index.html
+++ b/about-zizi/index.html
@@ -58,7 +58,7 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 				allowfullscreen="allowfullscreen"></iframe>
 			<div class="font-serif text-center team md:px-20">
 				<p>A multi-channel video installation commissioned by the V&A with the support of the Manitou
-					Fund, created with 21 of London and the UK’s top drag artists.</p>
+					Foundation, created with 21 of London and the UK’s top drag artists.</p>
 				<div class="p-4">
 					<p><a href="https://www.vam.ac.uk/event/ojRbdO9D2a/the-zizi-show-by-jake-elwes-2023-24"
 							target="_blank">V&amp;A Information</a></p>
@@ -119,8 +119,8 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 				zizi.ai
 			</p>
 			<p>
-				<a href="https://www.eca.ed.ac.uk/profile/dr-drew-hemment" target="_blank">Dr Drew Hemment</a>
-				<br>Edinburgh Futures Institute Partner
+				<a href="https://www.eca.ed.ac.uk/profile/dr-drew-hemment" target="_blank">Professor Drew Hemment</a>
+				<br>Research Director
 			</p>
 			<p>
 				<a href="https://www.cssd.ac.uk/staff-profiles/dr-joe-parslow" target="_blank">Dr Joe Parslow</a>
@@ -128,9 +128,8 @@ The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting 
 			</p>
 			<div class="text-sm py-8 space-y-6 md:mx-32">
 				<p>
-					The first iteration of The Zizi Show was created as an online web app supported by <a
-						href="https://www.newreal.cc/artworks/the-zizi-project" target="_blank">The New Real</a> at
-					Edinburgh Futures Institute.
+
+					The first iteration of The Zizi Show was commissioned by <a href="https://www.newreal.cc/artworks/the-zizi-project" target="_blank">The New Real</a> at University of Edinburgh and The Alan Turing Institute as an online experience for Edinburgh International Festival (2021).
 				</p>
 				<p><a href="https://www.vam.ac.uk/event/ojRbdO9D2a/the-zizi-show-by-jake-elwes-2023-24"
 						target="_blank">Comissioned by the V&amp;A</a> as a multi-channel video installation in 2023 for
