--- a/about-zizi/index.html
+++ b/about-zizi/index.html
@@ -30,6 +30,19 @@
 The Zizi Show (2020) is a deepfake drag cabaret, a virtual online stage hosting a groundbreaking new show with a twist. It features acts that have been constructed using deepfake technology, learning how to do drag by watching a diverse group of human performers. The Zizi Show dissects one of the dominant myths about AI, the notion that 'an AI' is a thing we might mistake for a person.">
 	<meta name="twitter:image" content="https://zizi.ai/zizishow.jpg">
 
+	<script>
+		(function (i, s, o, g, r, a, m) {
+			i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+				(i[r].q = i[r].q || []).push(arguments)
+			}, i[r].l = 1 * new Date(); a = s.createElement(o),
+				m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+		ga('create', 'UA-40831263-1', 'auto');
+		ga('send', 'pageview');
+
+	</script>
+
 </head>
 
 <body class="bg-black text-stone-300">
